# pythonprac

./: .gitignore  checker.py  iter1.py  iter2.py  task_mult.py
20200917_0/: task1.py  triangle.py
20200917_2/: task2.py
20200917_3/: task_3.py
20200917_4/: task_4.py
20200924_0/: task0.py
20200924_1/: task1.py
20200924_2/: task2.py
20200924_3/: task3.py
20200924_4/: task4.py
20201001_0/: task0.py
20201001_1/: task1.py
20201001_2/: task2.py
20201001_3/: task3.py
20201008_1/: task1.py
20201008_2/: task2.py
20201008_3/: task3.py
20201015_1/: task1.py
20201015_2/: task2.py  taska2.py
20201015_3/: input.txt  task3.py
20201022_2/: task2.py
20201022_3/: task3.py
20201105_1/: URLS  task1.py
20201105_2/: URLS  task2.py
20201105_3/: URLS  task3.py
20201112_1/: URLS
20201112_2/: URLS  task2.py
20201112_3/: URLS  task3.py
20201119_1/: URLS  task1.py
20201119_2/: URLS  task2.py
20201126_1/: task1.py
20201126_2/: task2.py
20201126_3/: task3.py
20201203_1/: URLS  task1.py
20201203_2/: URLS  task2.py
20201210_1/: URLS  task1.py
20201210_2/: URLS  task2.py
20210215_1/: task1.py
20210220_1/: task1.py
20210220_2/: task2.py
20210301_1/: task1.py
20210315_1/: task1.py
20210315_2/: task2.py
20210322_1/: task1.py
20210329_1/: opilki.txt
20210405_1/: logic.py  task1.py
20210412_2/: interface.py
20210419_1/: task1.py
20210426_1/: test_tfun.py  tfun.py
20210517_1/: README  dodo.py  pyproject.toml  setup.cfg
20210517_1/figeq/: __init__.py  __main__.py  test.py
20210517_1/lang/ru/LC_MESSAGES/: fig.po
(+93 files in other folders)
