[metadata]
name = figeq
version = 0.0.3
url = https://github.com/alexey-kaz/pythonprac/tree/master/20210517_1
author = alexey-kaz
author_email = s02180645@gse.cs.msu.ru

[options]
packages = figeq
include_package_data = True
install_requires =
        doit
        build
        figeq
        pyfiglet

[options.package_data]
figeq = */*/fig.mo

